Test mem options added for CI builds